--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   carousel_slider: ^5.0.0
   lottie: ^3.1.3
   cached_network_image: ^3.4.1
+  flutter_html: 3.0.0-beta.2
+  webview_flutter: ^4.10.0
 
   flutter: 
     sdk: flutter
@@ -23,6 +25,7 @@ dependencies:
 
   connectivity_plus: ^6.1.0
   smooth_page_indicator: ^1.2.0+3
+  html: ^0.15.5
 
 dev_dependencies:
   flutter_test:
