--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   carousel_slider: ^5.0.0
   lottie: ^3.1.3
   cached_network_image: ^3.4.1
-  flutter_html: 3.0.0-beta.2
+  #flutter_html: ^2.2.1
   webview_flutter: ^4.10.0
 
   flutter: 
