--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   cached_network_image: ^3.4.1
   #flutter_html: ^2.2.1
   webview_flutter: ^4.10.0
-
+  razorpay_flutter: ^1.3.7
   flutter: 
     sdk: flutter
   url_launcher: ^6.3.1
