--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   #flutter_html: ^2.2.1
   webview_flutter: ^4.10.0
   razorpay_flutter: ^1.3.7
-  get_cli: ^1.9.1
+  get_cli:
   flutter: 
     sdk: flutter
   url_launcher: ^6.3.1
