--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   connectivity_plus: ^6.1.0
   smooth_page_indicator: ^1.2.0+3
   html: ^0.15.5
+  flutter_launcher_icons: ^0.14.2
 
 dev_dependencies:
   flutter_test:
