--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,11 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
-
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 android {
     namespace = "com.example.ecommerce_app"
     compileSdk = flutter.compileSdkVersion
@@ -48,13 +52,15 @@ android {
         }
     }
 
-    dependencies {
-    // ...
-    implementation("com.google.android.material:material:1.12.0")
-    // ...
-}
+
 }
 
 flutter {
     source = "../.."
+}
+
+    dependencies {
+    // ...
+    implementation("com.google.android.material:material:1.12.0")
+    // ...
 }
