--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   url_launcher: ^6.3.1
   shimmer: ^3.0.0
   intl: ^0.18.0
-  connectivity_plus: ^6.1.0
+  connectivity_plus:
   smooth_page_indicator: ^1.2.0+3
   html: ^0.15.5
   flutter_launcher_icons: ^0.14.2
